Git Tests/force-app/main/default/default/objects/Case/fields/AnaliseDoCaso__c.field-meta.xml
<CustomField>
    <fullName>AnaliseDoCaso__c</fullName>
    <label>Análise do Caso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Procedente</fullName>
            </value>
            <value>
                <fullName>Não Procedente</fullName>
            </value>
            <value>
                <fullName>Em Análise</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>