Git Tests/force-app/main/default/default/objects/Case/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado</label>
    <type>Checkbox</type>
</CustomField>