Git Tests/force-app/main/default/default/objects/Case/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aprovador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>