Git Tests/force-app/main/default/default/objects/Case/fields/AreaDemandante__c.field-meta.xml
<CustomField>
    <fullName>AreaDemandante__c</fullName>
    <description>Informação da área de origem ao qual o demandante do caso pertence.</description>
    <label>Área Demandante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comercial - Especialidades Farmacêuticas</fullName>
            </value>
            <value>
                <fullName>Comercial - Genéricos e Similares</fullName>
            </value>
            <value>
                <fullName>Comercial - OPME, Materiais e Nutrição</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Gente e Gestão</fullName>
            </value>
            <value>
                <fullName>Inovação e Digital</fullName>
            </value>
            <value>
                <fullName>Jurídico &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Operações</fullName>
            </value>
            <value>
                <fullName>Planejamento Estratégico e Integrações</fullName>
            </value>
            <value>
                <fullName>Serviços Logísticos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>