Git Tests/force-app/main/default/default/objects/Case/fields/Assigned_department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_department__c</fullName>
    <formula>IF(Owner:Queue.QueueName = &quot;&quot;,Owner:User.Department, Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned department</label>
    <type>Text</type>
</CustomField>