Git Tests/force-app/main/default/default/objects/Case/fields/BypassValidationRules__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassValidationRules</label>
    <type>Checkbox</type>
</CustomField>