Git Tests/force-app/main/default/default/objects/Case/fields/CasoReaberto__c.field-meta.xml
<CustomField>
    <fullName>CasoReaberto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo criado para marcar um caso que foi reaberto</description>
    <label>Caso Reaberto</label>
    <type>Checkbox</type>
</CustomField>