Git Tests/force-app/main/default/default/objects/Case/fields/CNPJContaCaso__c.field-meta.xml
<CustomField>
    <fullName>CNPJContaCaso__c</fullName>
    <description>Informação do CNPJ referente ao Cliente do Caso.</description>
    <formula>Account.CNPJ__c</formula>
    <label>CNPJ do Cliente</label>
    <type>Text</type>
</CustomField>