Git Tests/force-app/main/default/default/objects/Case/fields/DevolucaoAtoOuPosEntrega__c.field-meta.xml
<CustomField>
    <fullName>DevolucaoAtoOuPosEntrega__c</fullName>
    <label>Devolução Ato ou Pós Entrega?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
            <value>
                <fullName>No Ato</fullName>
            </value>
            <value>
                <fullName>Pós Entrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>