Git Tests/force-app/main/default/default/objects/Case/fields/Elapsed_time_in_miliseconds__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_time_in_miliseconds__c</fullName>
    <description>Elapsed time in miliseconds since the case was created until its closure</description>
    <label>Tempo Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>