Git Tests/force-app/main/default/default/objects/Case/fields/ElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTime__c</fullName>
    <formula>IF(

NOT(ISNULL(FinishedDate__c))
, 
TEXT( 
IF(DATEVALUE(CreatedDate)=DateValue(FinishedDate__c),0,
FLOOR(
ROUND( 24 * (
( 5 * FLOOR( ( DATEVALUE( FinishedDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( FinishedDate__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 24 * ( MOD( FinishedDate__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( CreatedDate) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 24 * ( MOD( CreatedDate - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1) ) )
)
)
),
0 ) / 24)
))

&amp; &quot; dias e &quot; 
&amp; TEXT(FLOOR(MOD(FinishedDate__c - CreatedDate, 1) * 24)) 
&amp; &quot; horas&quot;
,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Decorrido</label>
    <type>Text</type>
</CustomField>