Git Tests/force-app/main/default/default/objects/Case/fields/Emissor_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Emissor_do_Pedido__c</fullName>
    <inlineHelpText>Informar o nome do Emissor do Pedido, vinculado a NF citada no Caso aberto contra uma empresa do Grupo, que não esteja &quot;dentro do Nexos&quot;.</inlineHelpText>
    <label>Emissor do Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>