Git Tests/force-app/main/default/default/objects/Case/fields/EmissorDoPedido__c.field-meta.xml
<CustomField>
    <fullName>EmissorDoPedido__c</fullName>
    <formula>NotaFiscal__r.Pedido__r.CreatedBy.FirstName&amp;&quot; &quot;&amp;NotaFiscal__r.Pedido__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emissor do Pedido</label>
    <type>Text</type>
</CustomField>