Git Tests/force-app/main/default/default/objects/Case/fields/Empresa_Demandante_NPS__c.field-meta.xml
<CustomField>
    <fullName>Empresa_Demandante_NPS__c</fullName>
    <formula>CASE( TEXT(EmpresaDemandante__c) , 
        &quot;Agilfarma&quot;,
            &quot;atendimento-agilfarma&quot;,
        &quot;Anbioton&quot;,
            &quot;consolidado&quot;,
        &quot;ArtMedica&quot;,
            &quot;atendimento-artmedica&quot;,
        &quot;BioDent&quot;,
            &quot;consolidado&quot;,
        &quot;Biohosp&quot;,
             &quot;atendimento-biohosp&quot;,
        &quot;CDM&quot;,
             &quot;atendimento-cdm&quot;,
        &quot;Commed&quot;,
             &quot;atendimento-nacionalcommed&quot;,
        &quot;Cristal Pharma&quot;,
            &quot;consolidado&quot;,
        &quot;Dupatri&quot;,
             &quot;atendimento-dupatri&quot;,
        &quot;Elfa&quot;,
             &quot;atendimento-elfa&quot;,
        &quot;Fenergy&quot;,
            &quot;atendimento-fenergy&quot;,
        &quot;Jaw&quot;,
            &quot;atendimento-jaw&quot;,
        &quot;Majela&quot;,  
            &quot;consolidado&quot;,          
        &quot;Medcom&quot;,  
            &quot;atendimento-medcom&quot;,   
        &quot;Medcom Delivery&quot;,  
            &quot;atendimento-medcomdelivery&quot;,            
        &quot;Mostaert&quot;,  
            &quot;atendimento-mostaert&quot;,   
        &quot;Nacional&quot;,  
            &quot;atendimento-nacionalcommed&quot;,   
        &quot;Oncorio&quot;,  
            &quot;atendimento-oncorio&quot;,           
        &quot;Prescrita&quot;,  
            &quot;atendimento-prescrita&quot;, 
        &quot;Surya&quot;,  
            &quot;atendimento-suryadental&quot;,           
        &quot;Vital Procifar&quot;,  
            &quot;atendimento-vitalprocifar&quot;,
&quot;consolidado&quot;)</formula>
    <label>Empresa Demandante NPS</label>
    <type>Text</type>
</CustomField>