Git Tests/force-app/main/default/default/objects/Case/fields/EmpresaDemandante__c.field-meta.xml
<CustomField>
    <fullName>EmpresaDemandante__c</fullName>
    <description>Informação da empresa de origem ao qual o demandante do caso pertence.</description>
    <label>Empresa Demandante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agilfarma</fullName>
            </value>
            <value>
                <fullName>Anbioton</fullName>
            </value>
            <value>
                <fullName>ArtMedica</fullName>
            </value>
            <value>
                <fullName>BioDent</fullName>
            </value>
            <value>
                <fullName>Biohosp</fullName>
            </value>
            <value>
                <fullName>CDM</fullName>
            </value>
            <value>
                <fullName>Commed</fullName>
            </value>
            <value>
                <fullName>Cristal Pharma</fullName>
            </value>
            <value>
                <fullName>Dupatri</fullName>
            </value>
            <value>
                <fullName>Elfa</fullName>
            </value>
            <value>
                <fullName>Fenergy</fullName>
            </value>
            <value>
                <fullName>Jaw</fullName>
            </value>
            <value>
                <fullName>Majela</fullName>
            </value>
            <value>
                <fullName>Medcom</fullName>
            </value>
            <value>
                <fullName>Mostaert</fullName>
            </value>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Oncorio</fullName>
            </value>
            <value>
                <fullName>Prescrita</fullName>
            </value>
            <value>
                <fullName>Surya</fullName>
            </value>
            <value>
                <fullName>Vital Procifar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>