Git Tests/force-app/main/default/default/objects/Case/fields/EmpresaFilial__c.field-meta.xml
<CustomField>
    <fullName>EmpresaFilial__c</fullName>
    <description>Informação da Empresa/Filial, referente a NF citada no Caso.</description>
    <inlineHelpText>Informar a respectiva Empresa/Filial vinculada a NF citada no campo acima.</inlineHelpText>
    <label>Nota fiscal: Empresa/Filial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGILFARMA</fullName>
            </value>
            <value>
                <fullName>ART MEDICA - EUSEBIO (MATRIZ)</fullName>
            </value>
            <value>
                <fullName>ATMA SSA - ATMA SSA</fullName>
            </value>
            <value>
                <fullName>BIOHOSP - BELO HORIZONTE (FILIAL 02)</fullName>
            </value>
            <value>
                <fullName>BIOHOSP - CONTAGEM (MATRIZ)</fullName>
            </value>
            <value>
                <fullName>BIOHOSP - RIO DE JANIERO (FILIAL 03)</fullName>
            </value>
            <value>
                <fullName>CDM CE - CDM CEARÁ</fullName>
            </value>
            <value>
                <fullName>CDM PA - CDM PARÁ</fullName>
            </value>
            <value>
                <fullName>CDM PE - CDM PERNAMBUCO</fullName>
            </value>
            <value>
                <fullName>CIENCIA  - CIENCIA MATRIZ</fullName>
            </value>
            <value>
                <fullName>COMERCIAL COMMED - SAO PAULO (MATRIZ)</fullName>
            </value>
            <value>
                <fullName>CONSOLIDADORA - CONSOLIDADORA</fullName>
            </value>
            <value>
                <fullName>CRISTAL - CRISTAL MATRIZ</fullName>
            </value>
            <value>
                <fullName>DUPATRI - BETIM (FILIAL 08)</fullName>
            </value>
            <value>
                <fullName>DUPATRI - CATALAO (FILIAL 03)</fullName>
            </value>
            <value>
                <fullName>DUPATRI - SANTOS (MATRIZ)</fullName>
            </value>
            <value>
                <fullName>DUPATRI - SUMARE (FILIAL 07)</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA BSB</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED BA</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED CE</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED CEARA</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED DCT</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED ITAIM</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED JP</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED SC</fullName>
            </value>
            <value>
                <fullName>ELFA BSB - ELFA MED SP</fullName>
            </value>
            <value>
                <fullName>ELFA FOR - ELFA FOR</fullName>
            </value>
            <value>
                <fullName>JAW - JAW FILIAL PR</fullName>
            </value>
            <value>
                <fullName>JAW - JAW FILIAL RS</fullName>
            </value>
            <value>
                <fullName>JAW - JAW MATRIZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>