Git Tests/force-app/main/default/default/objects/Case/fields/FinishedDate__c.field-meta.xml
<CustomField>
    <fullName>FinishedDate__c</fullName>
    <label>Data de Finalização</label>
    <type>DateTime</type>
</CustomField>