Git Tests/force-app/main/default/default/objects/Case/fields/Fora_do_Nexos__c.field-meta.xml
<CustomField>
    <fullName>Fora_do_Nexos__c</fullName>
    <description>Efeito visual no topo do caso para mostrar VISUALMENTE que o caso faz parte da excessão “Empresas fora do Nexos”</description>
    <formula>CASE(EmpresaDemandante__c, 
		&quot;Agilfarma&quot;, 1, 
	&quot;Biodent&quot;, 1,  
	&quot;CDM&quot;, 1,
	&quot;Dupatri&quot;, 1, 
	&quot;Elfa&quot;, 1, 
	&quot;Fenergy&quot;, 1, 
	&quot;Jaw&quot;, 1, 
	&quot;Oncorio&quot;, 1, 
	&quot;Prescrita&quot;, 1, 
	&quot;Surya&quot;, 1, 
	&quot;Anbioton&quot;, 1,
	&quot;Cristal Pharma&quot;, 1,
	&quot;Majela&quot;, 1,
0) = 1</formula>
    <label>Fora do Nexos?</label>
    <type>Checkbox</type>
</CustomField>