Git Tests/force-app/main/default/default/objects/Case/fields/FormatoDeDevolucao__c.field-meta.xml
<CustomField>
    <fullName>FormatoDeDevolucao__c</fullName>
    <label>Formato de Devolução</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Física</fullName>
            </value>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>