Git Tests/force-app/main/default/default/objects/Case/fields/Forward__c.field-meta.xml
<CustomField>
    <fullName>Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encaminhar</label>
    <type>Checkbox</type>
</CustomField>