Git Tests/force-app/main/default/default/objects/Case/fields/FowardedToCustomerServiceCounter__c.field-meta.xml
<CustomField>
    <fullName>FowardedToCustomerServiceCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fowarded To Customer Service Counter</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>