Git Tests/force-app/main/default/default/objects/Case/fields/FowardedToRegistrationCounter__c.field-meta.xml
<CustomField>
    <fullName>FowardedToRegistrationCounter__c</fullName>
    <label>Fowarded To Registration Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>