Git Tests/force-app/main/default/default/objects/Case/fields/FowardedToReturnAreaCounter__c.field-meta.xml
<CustomField>
    <fullName>FowardedToReturnAreaCounter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fowarded To Return Area</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>