Git Tests/force-app/main/default/default/objects/Case/fields/KeyAccount__c.field-meta.xml
<CustomField>
    <fullName>KeyAccount__c</fullName>
    <description>Campo criado para informar se a Conta do Caso é, ou não, do tipo Key Account.</description>
    <formula>TEXT(Account.KeyAccount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key account</label>
    <type>Text</type>
</CustomField>