Git Tests/force-app/main/default/default/objects/Case/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2ª Via de Nota Fiscal/Boleto</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Atualização de Cadastro</fullName>
            </value>
            <value>
                <fullName>Ausência na Entrega</fullName>
            </value>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Cancelamento do Pedido</fullName>
            </value>
            <value>
                <fullName>Carta de Comprometimento de Troca</fullName>
            </value>
            <value>
                <fullName>Carta de Correção</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Desvio de Qualidade</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Documentos de Filiais</fullName>
            </value>
            <value>
                <fullName>Endereço errado</fullName>
            </value>
            <value>
                <fullName>Entrega em Atraso</fullName>
            </value>
            <value>
                <fullName>Entrega Programada</fullName>
            </value>
            <value>
                <fullName>Erro no Cadastro Produto</fullName>
            </value>
            <value>
                <fullName>Erro XML/ 2ª via</fullName>
            </value>
            <value>
                <fullName>Extravio do Pedido</fullName>
            </value>
            <value>
                <fullName>Falta de Estoque</fullName>
            </value>
            <value>
                <fullName>Falta de Informação no COMPROVEI/ LYNCROS</fullName>
            </value>
            <value>
                <fullName>Faturamento do Pedido</fullName>
            </value>
            <value>
                <fullName>Faturamento Incorreto</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Fiscal</fullName>
            </value>
            <value>
                <fullName>Histórico de Pagamentos</fullName>
            </value>
            <value>
                <fullName>Histórico de Pedidos</fullName>
            </value>
            <value>
                <fullName>Inconsistência Geral</fullName>
            </value>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Paciente Veio a Óbto/Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>