Git Tests/force-app/main/default/default/objects/Case/fields/Nexos__c.field-meta.xml
<CustomField>
    <fullName>Nexos__c</fullName>
    <description>Ícone para indicar se o caso está fora do Nexos</description>
    <formula>IF( Fora_do_Nexos__c , IMAGE(&quot;/resource/nexos_off&quot;, &quot;Fora do Nexos&quot;, 24, 112), IMAGE(&quot;/resource/nexos_on&quot;, &quot;Dentro do Nexos&quot;, 25, 131))</formula>
    <label>Situação Nexos</label>
    <type>Text</type>
</CustomField>