Git Tests/force-app/main/default/default/objects/Case/fields/NotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nota fiscal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Favor informar uma Nota Fiscal que se relacione ao CLIENTE informado no CASO.</errorMessage>
        <filterItems>
            <field>NotasFiscais__c.Conta__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>Favor informar uma Nota Fiscal que se relacione ao CLIENTE informado no CASO..</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NotasFiscais__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>