Git Tests/force-app/main/default/default/objects/Case/fields/NotaFiscalEmpresaFilial__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscalEmpresaFilial__c</fullName>
    <description>Informação da Empresa/Filial, referente a NF citada no Caso.</description>
    <formula>NotaFiscal__r.Empresa__c</formula>
    <label>Nota fiscal: Empresa/Filial</label>
    <type>Text</type>
</CustomField>