Git Tests/force-app/main/default/default/objects/Case/fields/Numero_da_Nota_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Numero_da_Nota_Fiscal__c</fullName>
    <inlineHelpText>Informar o número da Nota Fiscal vinculada ao Caso aberto contra uma empresa do Grupo, que não esteja &quot;dentro do Nexos&quot;</inlineHelpText>
    <label>Número da Nota Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>