Git Tests/force-app/main/default/default/objects/Case/fields/Numero_do_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Numero_do_Pedido__c</fullName>
    <inlineHelpText>Informar o número do pedido gerado pela NF informada, vinculada ao Caso aberto contra uma empresa do Grupo, que não esteja &quot;dentro do Nexos&quot;.</inlineHelpText>
    <label>Número do Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>