Git Tests/force-app/main/default/default/objects/Case/fields/NumeroDoPedido__c.field-meta.xml
<CustomField>
    <fullName>NumeroDoPedido__c</fullName>
    <formula>NotaFiscal__r.Pedido__r.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número do Pedido</label>
    <type>Text</type>
</CustomField>