Git Tests/force-app/main/default/default/objects/Case/fields/OwnerDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>OwnerDeveloperName__c</fullName>
    <formula>IF(Owner:Queue.QueueName = &quot;&quot;,Owner:User.Department, Owner:Queue.DeveloperName)</formula>
    <label>Owner Developer Name</label>
    <type>Text</type>
</CustomField>