Git Tests/force-app/main/default/default/objects/Case/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>IF(Owner:Queue.QueueName = &quot;&quot;, (Owner:User.FirstName + &quot; &quot; + Owner:User.LastName), Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietário</label>
    <type>Text</type>
</CustomField>