Git Tests/force-app/main/default/default/objects/Case/fields/ParaExcluir__c.field-meta.xml
<CustomField>
    <fullName>ParaExcluir__c</fullName>
    <inlineHelpText>Indique aqui se o Caso pode ser Excluído pelo Ivan ou Gilberto.</inlineHelpText>
    <label>Exclusão?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>