Git Tests/force-app/main/default/default/objects/Case/fields/PedidoProtheusCaso__c.field-meta.xml
<CustomField>
    <fullName>PedidoProtheusCaso__c</fullName>
    <formula>NotaFiscal__r.Pedido__r.PedidoProtheus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pedido Protheus</label>
    <type>Text</type>
</CustomField>