Git Tests/force-app/main/default/default/objects/Case/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesPreviousOwner</relationshipName>
    <type>Lookup</type>
</CustomField>