Git Tests/force-app/main/default/default/objects/Case/fields/ProdutoTermolabil__c.field-meta.xml
<CustomField>
    <fullName>ProdutoTermolabil__c</fullName>
    <label>Produto Termolábil?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>