Git Tests/force-app/main/default/default/objects/Case/fields/Razao__c.field-meta.xml
<CustomField>
    <fullName>Razao__c</fullName>
    <label>Razão</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Carta de Comprometimento de Troca</fullName>
            </value>
            <value>
                <fullName>Carta de Correção</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Faturamento Pedido</fullName>
            </value>
            <value>
                <fullName>Fechamento de Loop</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Pedido não faturado</fullName>
            </value>
            <value>
                <fullName>Pesquisa Ativa</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Tracking do Pedido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>