Git Tests/force-app/main/default/default/objects/Case/fields/ReopenedDatetime__c.field-meta.xml
<CustomField>
    <fullName>ReopenedDatetime__c</fullName>
    <label>Data e Hora de Reabertura</label>
    <type>DateTime</type>
</CustomField>