Git Tests/force-app/main/default/default/objects/Case/fields/ReopeningElapsedTime__c.field-meta.xml
<CustomField>
    <fullName>ReopeningElapsedTime__c</fullName>
    <formula>IF(

NOT(ISNULL(ReopeningFinishedDate__c))
, 
TEXT( 
IF(DATEVALUE(ReopenedDatetime__c)=DateValue(ReopeningFinishedDate__c),0,
FLOOR(
ROUND( 24 * (
( 5 * FLOOR( ( DATEVALUE( ReopeningFinishedDate__c ) - DATE( 1900, 1, 8) ) / 7) +
MIN(5,
MOD( DATEVALUE( ReopeningFinishedDate__c ) - DATE( 1900, 1, 8), 7) +
MIN( 1, 24 / 24 * ( MOD( ReopeningFinishedDate__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1 ) ) )
)
)
-
( 5 * FLOOR( ( DATEVALUE( ReopenedDatetime__c) - DATE( 1900, 1, 8) ) / 7) +
MIN( 5,
MOD( DATEVALUE( ReopenedDatetime__c ) - DATE( 1996, 1, 1), 7 ) +
MIN( 1, 24 / 24 * ( MOD( ReopenedDatetime__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1) ) )
)
)
),
0 ) / 24)
))

&amp; &quot; dias e &quot; 
&amp; TEXT(FLOOR(MOD(ReopeningFinishedDate__c - ReopenedDatetime__c, 1) * 24)) 
&amp; &quot; horas&quot;
,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Decorrido (Reabertura)</label>
    <type>Text</type>
</CustomField>