Git Tests/force-app/main/default/default/objects/Case/fields/ReopeningFinishedDate__c.field-meta.xml
<CustomField>
    <fullName>ReopeningFinishedDate__c</fullName>
    <label>Data de Finalização (Reabertura)</label>
    <type>DateTime</type>
</CustomField>