Git Tests/force-app/main/default/default/objects/Case/fields/ResponsavelAbertura__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelAbertura__c</fullName>
    <description>Informação do responsável pela abertura do caso</description>
    <formula>IF(TEXT(Origin) == &quot;Chatbot&quot;, &quot;Chat bot&quot;, CreatedBy.FirstName  &amp;&quot; &quot;&amp;  CreatedBy.LastName)</formula>
    <inlineHelpText>Informação do responsável pela abertura do caso</inlineHelpText>
    <label>Responsável pela Abertura</label>
    <type>Text</type>
</CustomField>