Git Tests/force-app/main/default/default/objects/Case/fields/ResponsavelAtendimento__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelAtendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Informação do atendente responsável pelo caso</description>
    <inlineHelpText>Nome do Atendente responsável pelo Caso</inlineHelpText>
    <label>Responsável pelo Atendimento</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Selecionar APENAS um responsável dentro da área de Atendimento ao Cliente do Grupo Elfa.</errorMessage>
        <filterItems>
            <field>User.Department</field>
            <operation>equals</operation>
            <value>Atendimento ao Cliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>